# saritasa-pre-commit-hooks

./: .editorconfig  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  requirements-dev.txt  setup.cfg
.github/: settings.yaml
pre_commit_hooks/: check_jira_pre_commit.py  check_nginx_wide_range.py  util.py
pre_commit_hooks/add_task_number/: cli.py  main.py  util.py
pre_commit_hooks/jira_pre_commit/: main.py
pre_commit_hooks/prevent_force_push/: main.py
testing/not-wide-try-files/nginx/: locations_allowed.conf
testing/wide-try-files-with-custom-disabled-locations/.nginx.d/: locations_disabled.conf
testing/wide-try-files-with-disabled-locations-different-config-name/: custom.conf
testing/wide-try-files-with-disabled-locations-different-config-name/custom/: locations_disabled.conf
testing/wide-try-files-with-disabled-locations/.nginx.d/: locations_disabled.conf
testing/wide-try-files-with-extra-disabled-locations/.nginx.d/: locations_allowed.conf
testing/wide-try-files-with-location-path/.nginx/: locations_allowed.conf
tests/: conftest.py  test_add_task_number.py  test_check_jira_pre_commit.py  test_check_nginx_wide_range.py
tests/assets/check-nginx-wide-range/not-wide-try-files/: nginx.conf
tests/assets/check-nginx-wide-range/wide-try-files-no-disabled-locations/: nginx.conf
tests/assets/check-nginx-wide-range/wide-try-files-with-extra-disabled-locations/.nginx.d/: locations_disabled.conf
tests/assets/check-nginx-wide-range/wide-try-files-with-location-path/: nginx.conf
tests/assets/no-try-files/: nginx.conf
tests/assets/no-try-files-with-default-nginx-includes/: nginx.conf
tests/assets/wide-try-files-with-custom-extra-disabled-locations/.nginx.d/: locations_disabled.conf
tests/assets/wide-try-files-with-disabled-locations/: nginx.conf
