[metadata]
name = saritasa_pre_commit_hooks
version = 0.0.1
description = Some Saritasa out-of-the-box hooks for pre-commit.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/saritasa-nest/saritasa-pre-commit-hooks
author = Kseniya Shaydurova
author_email = kseniya.shaydurova@saritasa.com
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
    crossplane>=0.5.8
    ipdb
python_requires = >=3.10

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    check-nginx-wide-range = pre_commit_hooks.check_nginx_wide_range:main
