[metadata]
name = saritasa_pre_commit_hooks
version = 0.0.1
description = Some Saritasa out-of-the-box hooks for pre-commit.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/saritasa-nest/saritasa-pre-commit-hooks
author = Kseniya Shaydurova
author_email = kseniya.shaydurova@saritasa.com
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
    crossplane>=0.5.8
    ipdb
python_requires = >=3.10

[options.packages.find]
exclude =
    tests*

[options.entry_points]
console_scripts =
    check-nginx-wide-range = pre_commit_hooks.check_nginx_wide_range:main
    add-task-number = pre_commit_hooks.add_task_number.cli:main

[flake8]
# https://www.flake8rules.com/
ignore =
# https://www.flake8rules.com/rules/E126.html
  E126,
# https://www.flake8rules.com/rules/W503.html
  W503,
# https://www.flake8rules.com/rules/W504.html
  W504,
# https://github.com/m-burst/flake8-pytest-style/blob/master/docs/rules/PT004.md
  PT004,
# Missing docstring in public module
  D100,
# Missing docstring in public method
  D102,
# Missing docstring in public function
  D103,
# Missing docstring in magic method
  D105,
# Missing docstring in public nested
  D106,
# Missing docstring in __init__
  D107,
# Manually surrounded by quotes, consider using the `!r` conversion flag
  B028,
# Invalid escape sequence (have nginx.conf regex, which shouldn't stick this rule)
  W605
# Use r”“” if any backslashes in a docstring (allow to use backslashes in docs)
  D301
inline-quotes=double
statistics = True
count = True
max-complexity = 10
pytest-fixture-no-parentheses = True
pytest-parametrize-names-type = list
pytest-parametrize-values-type = list
pytest-parametrize-values-row-type = list
max-line-length = 120

[isort]
line_length=120
multi_line_output=3
include_trailing_comma=True
